--- a/extensions/basic-setup/package.json
+++ b/extensions/basic-setup/package.json
@@ -7,12 +7,12 @@
   "author": "kenny wong <wowohoo@qq.com>",
   "license": "MIT",
   "type": "module",
-  "main": "./cjs/index.js",
-  "module": "./esm/index.js",
+  "main": "./cjs/index.cjs",
+  "module": "./esm/index.mjs",
   "exports": {
     ".": {
-      "require": "./cjs/index.js",
-      "import": "./esm/index.js"
+      "require": "./cjs/index.cjs",
+      "import": "./esm/index.mjs"
     },
     "./*": "./*"
   },
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/uiwjs/react-codemirror.git"
+    "url": "https://github.com/DavidD-Countersight/codemirror-extensions-basic-setup.git"
   },
   "files": [
     "src",
